Fixed: Word wrapping on the title

--- a/site-sass/tom/site.post-listing.scss
+++ b/site-sass/tom/site.post-listing.scss
@@ -138,7 +138,8 @@ hr {
 	letter-spacing: 2px;
   color: #ffffff;
   margin-bottom: 0px;
-  margin: 10px 0 10px 0;
+  margin: 5px 0 5px 0;
+	word-wrap: break-word;
 }
 
 .heading-image h4,
